# cpp_engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  copyCompiledShaders.bat  copyCompiledShaders.sh  fullBuild.bat  fullBuildWithTests.bat  fullBuildWithTests.sh  quickBuild.bat  quickBuild.sh  quickBuildWithTests.bat  quickBuildWithTests.sh  runTests.bat  runTests.sh  vcpkg-configuration.json
assets/models/car/: license.txt
assets/models/car2/: scene.gltf
assets/scenes/: emptyScene.json  testScene.json
assets/shaders/: fragment_shader.glsl  skybox.vert  vertex_shader.glsl
scripts/: fullBuild.bat  fullBuild.sh  fullBuildWithTests.bat  fullBuildWithTests.sh  quickBuild.bat  quickBuild.sh  quickBuildWithTests.bat  quickBuildWithTests.sh  runTests.sh
src/: Camera.cpp  Camera.h  InputHandler.cpp  InputHandler.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OpenGLSetup.cpp  OpenGLSetup.h  Renderer.cpp  Renderer.h  ShaderLoader.cpp  ShaderLoader.h  Skybox.h  Utils.cpp  Utils.h  WindowManager.cpp  WindowManager.h  main.cpp
src/editor/: Editor.cpp  Editor.h  EditorAgent.cpp  EditorAgent.h  GameObjectManager.cpp  GameObjectManager.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  SceneSaver.cpp  SceneSaver.h
src/platform/: InputHandler.cpp  InputHandler.h  WindowCallbacks.cpp  WindowCallbacks.h  WindowManager.cpp
src/rendering/: Camera.cpp  Camera.h  OpenGLSetup.cpp  OpenGLSetup.h  Renderer.cpp  Renderer.h  ShaderLoader.cpp  Skybox.cpp
src/scene/: GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  SceneSaver.cpp  SceneSaver.h  Skybox.cpp  Skybox.h  Transform.cpp  Transform.h
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/systems/: Physics.cpp  Physics.h  PhysicsBody.h  Time.cpp  Time.h
src/utils/: Utils.cpp  Utils.h
tests/: testUtils.cpp  testWindowManager.cpp
